--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "bootstrap": "^5.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.5",
