--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@
 /bazel-out
 
 # Node
-/node_modules
+/node_modules*
 /package-lock.json
 npm-debug.log
 yarn-error.log
+test-results/
+
 
 # IDEs and editors
 .idea/
