--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@chromatic-com/storybook": "^1.2.12",
     "@compodoc/compodoc": "^1.1.23",
+    "@playwright/test": "^1.45.3",
     "@storybook/addon-docs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
@@ -39,6 +40,7 @@
     "@storybook/blocks": "^8.0.0",
     "@storybook/test": "^8.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
