--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webpack": "^5.92.1",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-vis": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.5",
