--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-vis": "latest",
+    "firebase": "^11.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webpack": "^5.92.1",
-    "zone.js": "~0.14.2",
-    "@tensorflow-models/mobilenet": "^2.1.1",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-vis": "latest"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.5",
