--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,5 +1,4 @@
 {
-  "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
   "assetGroups": [
     {
@@ -11,7 +10,9 @@
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
-          "/*.js"
+          "/*.js",
+          "/*.ts",
+          "/assets/homepage.jpg"
         ]
       }
     },
